--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -79,6 +79,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 
 #挂在硬盘格式
+CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_kmod-fs-antfs=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
