--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -79,6 +79,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 
 #挂在硬盘格式
+CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_kmod-fs-antfs=y
@@ -86,6 +87,14 @@ CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-ntfs=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_autoshare-samba=y
+CONFIG_PACKAGE_samba4-libs=y
+CONFIG_PACKAGE_samba4-server=y
+CONFIG_SAMBA4_SERVER_WSDD2=y
+CONFIG_SAMBA4_SERVER_NETBIOS=y
+CONFIG_SAMBA4_SERVER_AVAHI=y
+CONFIG_SAMBA4_SERVER_VFS=y
+	
 
 
 
