--- a/linksys.config
+++ b/linksys.config
@@ -48,6 +48,8 @@ CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 
 #挂在硬盘格式
+CONFIG_DEFAULT_autocore-arm=y
+
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_antfs-mount=y
