--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -46,6 +46,8 @@ CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
 
+
+
 #通用配置ipv6
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -210,6 +212,9 @@ CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 #必须集成
+CONFIG_PACKAGE_luci-kmod-tcp-bbr=y
+
+
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-lib-base=y
 CONFIG_PACKAGE_luci-lib-ip=y
