--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -49,6 +49,20 @@ CONFIG_PACKAGE_6to4=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
 
+CONFIG_OPENSSL_ENGINE=y
+CONFIG_OPENSSL_OPTIMIZE_SPEED=y
+CONFIG_OPENSSL_WITH_ASM=y
+CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
+CONFIG_OPENSSL_WITH_CMS=y
+ CONFIG_OPENSSL_WITH_DEPRECATED=y
+CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
+CONFIG_OPENSSL_WITH_PSK=y
+CONFIG_OPENSSL_WITH_SRP=y
+CONFIG_OPENSSL_WITH_TLS13=y
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libopenssl-conf=y
+CONFIG_PACKAGE_openssl-util=y
+
 
 #必须集成
 CONFIG_PACKAGE_luci-kmod-tcp-bbr=y
@@ -86,8 +100,8 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 #多播
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-syncdial=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
 #IPTV组播
 CONFIG_PACKAGE_luci-app-udpxy=y
 #CONFIG_PACKAGE_luci-app-dawn=y
