--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -130,8 +130,8 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 #多播
-#CONFIG_PACKAGE_luci-app-syncdial=y
-#CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-mwan3=y
 #IPTV组播
 CONFIG_PACKAGE_luci-app-udpxy=y
 #CONFIG_PACKAGE_luci-app-dawn=y
