--- a/.github/workflows/newifi3-d2.yml
+++ b/.github/workflows/newifi3-d2.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/lede-project/source
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  REPO_BRANCH: openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: LEDE-Newifi3-d2.config
   DIY_P1_SH: diy-part1.sh
