--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -152,7 +152,7 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 #IPTV组播
-CONFIG_PACKAGE_luci-app-udpxy=y
+# CONFIG_PACKAGE_luci-app-udpxy is not set
 #CONFIG_PACKAGE_luci-app-dawn=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
