--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -146,11 +146,11 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_kmod-usb3 is not set
 
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-easymesh=y
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+#CONFIG_PACKAGE_luci-app-easymesh=y
+#CONFIG_PACKAGE_luci-app-guest-wifi=y
 #多播
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-syncdial=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
 #IPTV组播
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 #CONFIG_PACKAGE_luci-app-dawn=y
@@ -169,7 +169,7 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 
 
 #passwall科学
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 
 #ssrplus科学未集成
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
@@ -199,7 +199,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
-CONFIG_PACKAGE_luci-app-zerotier=y
+# CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 
 #CONFIG_PACKAGE_luci-theme-infinityfreedom=y
